--- a/vptree/Makefile
+++ b/vptree/Makefile
@@ -1,13 +1,13 @@
 CC=gcc
-CFLAGS= -O3 -fopenmp -fcilkplus -Wall -std=c99 -pthread -lm
+CFLAGS= -O3 -fopenmp -fcilkplus -Wall -std=c99 -pthread
 SDIR=./src
 LDIR=./lib
 IDIR=./inc
-INCLUDES = inc/vptree.h inc/quickselect.h
-LIBS= $(LDIR)/vptree_sequential.a $(LDIR)/vptree_pthread.a $(LDIR)/vptree_openmp.a $(LDIR)/vptree_cilk.a
-EXE= $(SDIR)/vptree_sequential $(SDIR)/vptree_pthread $(SDIR)/vptree_openmp $(SDIR)/vptree_cilk
+INCLUDES = inc/vptree.h
+LIBS= $(LDIR)/vptree_sequential.a $(LDIR)/vptree_pthreads.a $(LDIR)/vptree_openmp.a $(LDIR)/vptree_cilk.a
+EXE= $(SDIR)/vptree_sequential $(SDIR)/vptree_pthreads $(SDIR)/vptree_openmp $(SDIR)/vptree_cilk
 MAIN= main
-LDFLAGS = -Iinc
+LDFLAGS = -Iinc -lm
 
 
 
@@ -19,7 +19,7 @@ lib: $(LIBS)
 $(SDIR)/vptree_sequential.o: $(SDIR)/vptree_sequential.c
 	$(CC) $(CFLAGS) -o $@ -c $< $(LDFLAGS)
 
-$(SDIR)/vptree_pthread.o: $(SDIR)/vptree_pthread.c
+$(SDIR)/vptree_pthreads.o: $(SDIR)/vptree_pthreads.c
 	$(CC) $(CFLAGS) -o $@ -c $< $(LDFLAGS)
 
 $(SDIR)/vptree_openmp.o: $(SDIR)/vptree_openmp.c
@@ -33,7 +33,7 @@ $(SDIR)/vptree_cilk.o: $(SDIR)/vptree_cilk.c
 $(LDIR)/vptree_sequential.a: $(SDIR)/vptree_sequential.o
 	ar rcs $@ $< $(INCLUDES)
 
-$(LDIR)/vptree_pthread.a: $(SDIR)/vptree_pthread.o
+$(LDIR)/vptree_pthreads.a: $(SDIR)/vptree_pthreads.o
 	ar rcs $@ $<  $(INCLUDES)
 
 $(LDIR)/vptree_openmp.a: $(SDIR)/vptree_openmp.o
@@ -47,7 +47,7 @@ $(LDIR)/vptree_cilk.a: $(SDIR)/vptree_cilk.o
 $(SDIR)/vptree_sequential: $(SDIR)/$(MAIN).c $(LDIR)/vptree_sequential.a
 	$(CC) $(CFLAGS) $(INCLUDES) -o $@ $^ $(LDFLAGS)
 
-$(SDIR)/vptree_pthread: $(SDIR)/$(MAIN).c $(LDIR)/vptree_pthread.a
+$(SDIR)/vptree_pthreads: $(SDIR)/$(MAIN).c $(LDIR)/vptree_pthreads.a
 	$(CC) $(CFLAGS) $(INCLUDES) -o $@ $^  $(LDFLAGS)
 
 $(SDIR)/vptree_openmp: $(SDIR)/$(MAIN).c $(LDIR)/vptree_openmp.a
